# graphids

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CRITIQUE-2026-04-24.md  OPEN_ITEMS.md  PLAN.md  ablation.yaml  gpu_vram_usage.md  loss_composition.md  mkdocs.yml  mlops_tools_catalog.json  pyproject.toml  requirements-docs.txt  workspace.yaml
.claude/: codebase-graph.mmd  codebase-graph.yaml  entrypoints.txt  manifest.yaml  module-summaries.yaml  render_graph.py  settings.json
.claude/hooks/: README.md  route-to-cli.sh
.claude/plans/: id-vocab-and-masking.md  refactor-concern-map.md
.claude/rules/: architecture.md  chassis-invariants.md  code-style.md  config-system.md  critical-constraints.md  data-layout.md  documentation.md  experiment-tracking.md  gitnexus.md  project-structure.md  pytorch-compat.md  shell-environment.md  single-submission-primitive.md  slurm-hpc.md  test-writing.md
.claude/system/: PROJECT_OVERVIEW.md  STATE.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml
campaigns/: ablation_2026-04.yaml
configs/: CONFIG_REFERENCE.md  base.yaml  fusion.yaml  index.libsonnet  profile.yaml  result_views.yml
configs/_kit/: callbacks.libsonnet  row.libsonnet  trainer.libsonnet  validate.libsonnet
configs/_lib/: defaults.libsonnet  helpers.libsonnet  recipes.libsonnet
configs/ablations/: README.md  _paths.libsonnet
configs/compose/: fusion.libsonnet  supervised.libsonnet  unsupervised.libsonnet
configs/data/: datasets.json
configs/datasets/: dataset_registry.json
configs/experiments/: gat_snapshot_sequence_cache.yml  gat_snapshot_sequence_cache_hcrl_ch.yml  gat_snapshot_sequence_cache_hcrl_sa.yml  gat_snapshot_sequence_cache_set_02.yml  gat_snapshot_sequence_cache_set_03.yml  gat_snapshot_sequence_cache_set_04.yml  gat_snapshot_sequence_real.yml  gat_snapshot_sequence_smoke.yml  gat_temporal_smoke.yml  temporal_event_classifier_smoke.yml  vgae_temporal_smoke.yml
configs/fusion/: base.libsonnet
configs/losses/: ce.libsonnet  curriculum.libsonnet  focal.libsonnet  vgae_task.libsonnet  weighted_ce.libsonnet
configs/matrix/: axes.json  topology.json
configs/models/: _expand.jsonnet  fusion.libsonnet  supervised.libsonnet  unsupervised.libsonnet
configs/plans/: _lib.libsonnet  fusion.jsonnet  ofat.jsonnet  supervised.jsonnet  supervised_ablations.jsonnet  unsupervised.jsonnet
dashboard/: README.md  app.py  data_loader.py  requirements.txt
docs/: ECOSYSTEM.md  README.md  Research_libraries.md  config_reorg.md  config_resolver_report.md  configparser_report.md  directory_structure.md  directory_strucuture.md  icontract_report.md  index.md  logging_report.md  memory_optimization.md  migration_plan.md  mlflow-migration.md  opentelemetry_research.md  phase1_jsonnet.md  pydantic_report.md  responsibilites.md  responsibilities.md  tach_report.md
graphids/: REFACTOR_NOTES_2026-03-31.md  __init__.py  __main__.py  _cpu.py  _fs.py  _lightning.py  _mlflow.py  _otel.py  _reflect.py  _slurm.py  _spawn.py  api.py  blueprint.py  cli.py  cluster.py  contracts.py  instantiate.py  log.py  logging.py  orchestrate.py  paths.py  primitives.py  primitives_data.py  primitives_losses.py  primitives_models.py  runtime.py  runtime_checks.py
issues/: ablation-run-bugs.md  analysis-assets-in-process.md  config-system-overhaul.md  evaluation-stage-missing.md  kd-pipeline-untested.md  override-pipeline-consolidation.md  per-stage-recipe-overrides.md  pipeline-observability.md  recipe-env-var-not-propagating.md  slurm-phase-reporting.md
memory_profiling/: analysis_2026_03_27_collation.md  analysis_2026_03_27_multiprocessing.md  imagevgraph.md  investigation.md  investigation_v2.md  resource_plan_2026_03_27.md  scenario.md  walkthrough.md
plans/: ablation-001-training-efficiency.md  ablation-run-001.md  ablation-run-004-failures.md  ablation-runs-001-004-postmortem.md  ablation_and_main_005.md  artifacts-consolidation.md  codebase-reduction.md  codex-refactor-2026-03-31-analysis.md  dagster-integration.md  dagster-native-orchestration.md  eval-decomposition.md  experiment-sweep-plan.md  flatten-model-config.md  framework-consolidation.research.md  gpu-utilization-and-training-efficiency.md  hydra-dag-launcher.md  hydra-optuna-sweeper.freeform.md  hydra-sweep-plugins.md  jsonargparse-migration.md  lightning-api-reference.md  open_issues.md  otel-integration.md  phase-c-implementation.md  phase-d-implementation.md  phase-e-implementation.md  pipeline-cleanup.md  pipeline-consolidation.md  preprocessing-consolidation.md  preprocessing-edge-features.md  run-005-fixes.md  scripts-refactor-option-c.md  stage-executor-and-launcher.freeform.md  stage-executor-and-launcher.research.md  tier-priority-and-implementation.md  trainer-yaml-wiring.md  upgrades.md
rendered/: .gitignore
reports/: CHARTS.md  FIGURES.md  _brand.yml  _quarto.yml  custom.scss  dashboard.qmd  index.html  index.qmd  playground.qmd  poc_mosaic.html
scripts/: backfill_mlflow.py  build_ablation.py  build_pipeline.py  cache_rebuild.sh  export_paper_data.py  lint_docs.py  migrate_checkpoints.py  migrate_training_subdirs.py  mlflow_reap_zombies.py  plot_budget.py  probe_ray_train.py  profile_jobs.py  recalibrate_dgi.py  reproduce.sh  resubmit_student_vgae_kd.sh  results.py  run  scrape_clusters.py  spike_lightning_wrap.py  spike_monarch.py  submit.sh  submit_analyze.sh
tests/: conftest.py  test_cli_routing_smoke.py  test_config.py  test_dag_topology.py  test_dagster_orchestration.py  test_fire_and_forget.py  test_instantiate.py  test_integration.py  test_lake.py  test_layer_boundaries.py  test_mlflow.py  test_mlflow_resume.py  test_models.py  test_modules.py  test_new_features.py  test_pipeline_dag.py  test_pipeline_integration.py  test_pipes_slurm.py  test_preprocessing.py  test_resource_spec.py  test_runtime_checks.py  test_serve.py  test_slurm_primitives.py  test_smoke.py  test_storage.py  test_submit_profile.py  test_submit_sh.py  test_training_e2e.py  test_training_smoke.py
wandb/: latest-run
(+1556 files in other folders)
