[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphids"
version = "1.0.0"
description = "CAN Bus Intrusion Detection via Graph Neural Networks and Knowledge Distillation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.8.0,<2.9",
    "torch-geometric>=2.7.0",
    "lightning>=2.6",
    "torch-scatter",
    "torch-sparse",
    "torch-cluster",
    "pyg-lib",
    "torchmetrics>=1.8.0",
    "torchrl>=0.6",
    "tensordict>=0.6",
    "numpy>=1.26.4",
    "polars>=1.0.0",
    "pandas>=2.2.3",
    "pyarrow>=14.0.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "psutil>=6.0.0",
    "scipy>=1.13.0",
    "networkx>=3.2",
    "scikit-learn>=1.5.0",
    "optuna>=4.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "duckdb>=1.0.0",
    "typer[all]>=0.12",
    "alembic>=1.18",
    "nvidia-ml-py>=11.5",
    "mlflow-skinny>=2.17",
    "filelock>=3.13",
    "structlog>=24.0",
    "ray[train,tune]>=2.55",
]

[project.optional-dependencies]
analysis = ["umap-learn>=0.5", "seaborn>=0.13", "torch-cka>=0.21", "huggingface-hub>=0.24"]
dev = ["pytest>=7.0.0", "httpx>=0.27", "ruff>=0.4"]
baselines = ["pygod>=1.1"]
db = ["psycopg[binary]>=3.1"]

[project.scripts]
graphids = "graphids.__main__:main"
gx = "graphids.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["graphids"]

[tool.uv.sources]
torch-scatter = { index = "pyg-cu128" }
torch-sparse = { index = "pyg-cu128" }
torch-cluster = { index = "pyg-cu128" }
pyg-lib = { index = "pyg-cu128" }

[[tool.uv.index]]
name = "pyg-cu128"
url = "https://data.pyg.org/whl/torch-2.8.0+cu128.html"
explicit = true
format = "flat"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (>30s, deselect with '-m not slow')",
    "slurm: marks tests that require SLURM submission (torch imports, CUDA, full training)",
]
filterwarnings = [
    "ignore:Can't initialize NVML:UserWarning:torch.cuda",
    "ignore:.*torch_geometric.distributed.*has been deprecated:DeprecationWarning",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "E402", "E741", "W291", "W292", "W293", "F541", "B905", "B017"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "graphids.plan.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torch_geometric.*",
    "torchmetrics.*",
    "optuna.*",
    "sklearn.*",
    "umap.*",
    "seaborn.*",
]
ignore_missing_imports = true
